--- a/index.html
+++ b/index.html
@@ -7,12 +7,19 @@
     <link rel="stylesheet" href="style/blog.css">
 </head>
 <body>
-    <div>
+    <div class="lk3">
         <h2>My frist blog</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, quis non culpa consequatur quos reprehenderit eos quo nulla impedit praesentium iste laboriosam at suscipit odio exercitationem doloribus accusamus ducimus omnis.</p>
     </div>
-    <div>
+    <div class="lk3">
+        <h2>My secound blok</h2>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae aspernatur doloribus expedita! Dicta laudantium non, qui expedita reprehenderit eum nemo tempore illo, nam cum beatae aliquam, commodi soluta inventore dignissimos?</p>
+    </div>
+    <div class="lk3">
+        <h2>My Third blok</h2>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, minus ipsam. Explicabo quidem architecto saepe maxime vel sed tenetur? Aspernatur quia quis aliquid accusantium fugit aliquam commodi impedit officiis aperiam!
+        </p>
     </div>
 </body>
 </html>
